tests/error/typ_forcing/ret.mml
let f x : bool = x in - (f true)
